unpackaged/objects/Change_Of_Major__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request for Change of Major/Minor</relationshipLabel>
        <relationshipName>Change_Of_Majors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Drop_Minor__c</fullName>
        <label>I Would Like To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drop Minor</fullName>
                </value>
                <value>
                    <fullName>Change Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Request for Change of Major/Minor</relationshipLabel>
        <relationshipName>Change_Of_Majors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Major__c</fullName>
        <label>Current Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Of_Major</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Minor__c</fullName>
        <label>Current Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Of_Major</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major_Head_Of_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Head of Study</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HOS_Change_Of_Majors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minor_Head_Of_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Minor Head of Study</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HOS_Change_Of_Minors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Major__c</fullName>
        <label>New Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Of_Major</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Minor__c</fullName>
        <label>New Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Of_Major</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <label>Major/minor updated by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VR_Decision_Date__c</fullName>
        <label>VR Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VR_Decision__c</fullName>
        <label>VR Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Change Of Major</label>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Change Of Major ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Of Majors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>